Correct sign in form spacing

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1124,7 +1124,7 @@ input[type="email"], input[type="password"] {
   width: 66.13%;
   border-radius: 0.25rem;
   box-shadow: 0 1px 0 rgba(0,0,0,.25);
-  padding: 2rem 2rem 2rem 1rem;
+  padding: 2rem 2rem 4rem 1rem;
   margin: 0 auto 2rem;
   position: relative;
   border: 1px solid #e8e8e8;
@@ -1143,6 +1143,10 @@ input[type="email"], input[type="password"] {
   
   .margin-bottom {
     margin-bottom: 1rem;
+  }
+  
+  .small-margin-bottom {
+    margin-bottom: 0.5rem;
   }
 }
 
